# courseclicker

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  build.py  pyproject.toml  requirements.txt
src/courseclicker/: main.py
tests/: test_basic.py
