# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "courseclicker"
version = "0.1.0"
description = "Minimal auto-clicker that keeps you moving forward"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyautogui>=0.9",
    "wakepy>=0.9"
]

[project.scripts]
courseclicker = "courseclicker.main:main"